--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body>
 
     <div style="text-align: center;">
-        <a href=".exe Apps/DigitalClock.exe"">Digital Clock (made in 17.09.2025)</a><br>
-        <a href=".exe Apps/Stopwatch.exe">Stopwatch (made in 18.09.2025)</a><br>
-        <a href=".exe Apps/WeatherApp.exe">Weather App (made in 19.09.2025)</a><br>
-        <a href=".exe Apps/ToDoApp_by_iyiinsan5555.exe">To-Do App (made in 23.09.2025)</a><br>
+        <a href="https://drive.google.com/file/d/16-l5FhP4-e9W-BBUXw6PpE4jQUsTB_iI/view?usp=drive_link">Digital Clock (made in 17.09.2025)</a><br>
+        <a href="https://drive.google.com/file/d/1vR1Jmg9TWMH_bEnBxtC-TQyfOT152jL6/view?usp=drive_link">Stopwatch (made in 18.09.2025)</a><br>
+        <a href="https://drive.google.com/file/d/1Je-Uyj4GHumbY1tpfaxYBmYeWFHiaRvc/view?usp=drive_link">Weather App (made in 19.09.2025)</a><br>
+        <a href="https://drive.google.com/file/d/1KXFCDvmJ6R-sIz81z9oNk59ZUOA_Icr3/view?usp=drive_link">To-Do App (made in 23.09.2025)</a><br>
     </div>
     
     
