Added really basic game (don't play it 😥)

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <a href="https://drive.google.com/file/d/1vR1Jmg9TWMH_bEnBxtC-TQyfOT152jL6/view?usp=drive_link">Stopwatch (made in 18.09.2025)</a><br>
         <a href="https://drive.google.com/file/d/1Je-Uyj4GHumbY1tpfaxYBmYeWFHiaRvc/view?usp=drive_link">Weather App (made in 19.09.2025)</a><br>
         <a href="https://drive.google.com/file/d/1KXFCDvmJ6R-sIz81z9oNk59ZUOA_Icr3/view?usp=drive_link">To-Do App (made in 23.09.2025)</a><br>
+        <a href="https://drive.google.com/file/d/18ii00b9RotLEL-Zg4zURIqjkhC5-XxGU/view?usp=drive_link">Catch The Garbage Game [Basic] (made in 01.10.2025)</a><br>
+        <a href="https://drive.google.com/file/d/1kmLLpHGPjZz6VqK5zG_xAO5VrSzDAPOI/view?usp=drive_link">Catch The Garbage Game AI [Basic] (made in 01.10.2025)</a><br>
     </div>
     
     
